# MVod-TFM-desgaste

./: README.md
PATCHCORE/: CODIGOV_PATCHCORE.py
SAM-LoRA/: .gitignore  pyproject.toml
SAM-LoRA/annotations/: RB01_coco.json  RB02_coco.json  RB03_coco.json  RB04_coco.json  RB05_coco.json  RB06_coco.json  RB07_coco.json  RB08_coco.json  RB09_coco.json  RB10_coco.json  RB11_coco.json
SAM-LoRA/annotations - copia/: RB01_coco.json  RB02_coco.json  RB03_coco.json  RB04_coco.json  RB05_coco.json  RB06_coco.json  RB07_coco.json  RB08_coco.json  RB09_coco.json  RB10_coco.json  RB11_coco.json  RM01_coco.json  RM02_coco.json  RM03_coco.json  RM04_coco.json  RM05_coco.json  RM06_coco.json  RM07_coco.json  RM08_coco.json  RM09_coco.json  RM10_coco.json  RM11_coco.json
SAM-LoRA/app/: app.py  config.py  db.py  experiments.db  inference.py  logger.py  model.py  training.py
SAM-LoRA/notebooks/: 01_limpieza.ipynb  02_segmentacion.ipynb
mil-unet/: app.py  mlflow_v1.db  train_final.py
mil-unet copy/: mlflow.db  mlflow_prev.db  pipeline.py  pyproject.toml  scale_factor.json
mil-unet copy/configs/: branch_a.yaml  branch_b.yaml  branch_c.yaml
mil-unet copy/mlruns/0/: meta.yaml
mil-unet copy/notebooks/: kaggle_pipeline.ipynb  validate_masks.ipynb
mil-unet copy/output/: branch_a.txt  branch_b.txt
mil-unet copy/src/: inference_utils.py
mil-unet copy/src/branches/: branch_c_profile.py
mil-unet copy/src/evaluation/: aggregation.py  loocv.py  metrics.py
mil-unet copy/src/preprocessing/: registration.py
mil-unet copy/tests/: conftest.py  test_aggregation.py  test_branch_c.py  test_branch_e.py  test_metrics.py  test_mlflow_logger.py  test_registration.py  test_synthetic_mask.py
mil-unet/models/: branch_c_final.pkl  branch_f_final.pkl
mil-unet/output/: branch_e.txt  branch_f.txt
mil-unet/scripts/: merge_mlflow.py
mil-unet/src/: visualization.py
mil-unet/src/branches/: base.py  branch_a_mil.py  branch_e_unet.py
mil-unet/src/preprocessing/: m2_preprocessing.py  scale_calibration.py  synthetic_mask.py
mil-unet/src/tracking/: mlflow_logger.py
mil-unet/tests/: test_branch_a.py  test_inference_utils.py  test_loocv.py  test_m2.py  test_scale_calibration.py  test_train_final.py  test_visualization.py
