[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "lora-sam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "albumentations>=2.0.8",
    "emd-signal>=1.9.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=2.0,<3.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=2.0,<3.0",
    "peft>=0.19.1",
    "pillow>=12.1.1",
    "protobuf>=4.21",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.45.0",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "timm>=1.0.26",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
