[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jordi"
version = "0.1.0"
description = "Automated wear detection system for threading tools based on Bidimensional Local Mean Decomposition (BLMD), homomorphic filtering and PatchCore anomaly detection on industrial grayscale imagery."
readme = "README.md"
requires-python = ">=3.12"
authors = []
keywords = [
    "computer-vision",
    "wear-detection",
    "BLMD",
    "anomaly-detection",
    "industrial-inspection",
]
dependencies = [
    "numpy>=2.2",
    "opencv-python",
    "scipy",
    "pywavelets",
    "scikit-image",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "torch",
    "torchvision",
    "anomalib",
    "jupyter",
    "ipykernel",
    "mlflow>=3.12.0",
    "timm>=1.0.26",
    "segmentation-models-pytorch>=0.5.0",
    "segment-anything>=1.0",
    "pytest>=9.0.3",
    "streamlit>=1.57.0",
    "grad-cam>=1.5.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src", "."]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
